# worktio

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yaml  cl.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  database.rs  main.rs  user_db.rs  video.rs
src-tauri/src/auth/: callback.rs  exchane.rs  mod.rs  oauth.rs  platform.rs  tokens.rs
src-tauri/src/database/: mod.rs
src/auth/: page.tsx
src/collabs/: workflows.tsx
src/components/: auth-scren.tsx
src/components/shared/si/: sidebar.tsx
src/components/shared/workflow/: workflow-editor.tsx
src/pages/: Setting.tsx
