[package]
name = "worktio"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "worktio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
# Asenkron çalışma motoru
tokio = { version = "1.0", features = ["full"] }
# API istekleri (YouTube & Gemini)
reqwest = { version = "0.11", features = ["json", "stream"] }
# Yerel Veritabanı (Veri kaybolmasın diye)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
# Analitik Canavarı
polars = { version = "0.36", features = ["lazy", "csv", "json"] }
# Hata Yönetimi
anyhow = "1.0"
aes-gcm = "0.10"
